sassi/tests/compile_fail/watermark_tuple_contains_bool.rs
//! Tuple watermark components must all be monotonic watermark types.

use sassi::MonotonicWatermark;

fn assert_watermark<T: MonotonicWatermark>() {}

fn main() {
    assert_watermark::<(i64, bool)>();
}
